<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">EdXposed Manager</string>
    <string name="android_sdk" translatable="false">Android %2$s (%1$s, API %3$d)</string>
    <string name="solohsu" translatable="false">givein2u</string>
    <string name="mlgmxyysd" translatable="false">MlgmXyysd</string>
    <string name="elderdrivers" translatable="false">Elder Drivers</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="xda" translatable="false">XDA</string>
    <string name="support_material_xda" translatable="false">http://edxp.meowcat.org/</string>
    <string name="support_donate_url" translatable="false">http://edxp.meowcat.org/donate</string>
    <string name="about_support" translatable="false">http://edxp.meowcat.org/faq</string>
    <string name="support_faq_url" translatable="false">http://github.com/ElderDrivers/EdXposed/wiki</string>
    <string name="about_source" translatable="false">https://github.com/ElderDrivers/EdXposedManager/</string>
    <string name="solohsu_xda" translatable="false">https://forum.xda-developers.com/member.php?u=5571846</string>
    <string name="solohsu_github" translatable="false">https://github.com/solohsu</string>
    <string name="solohsu_coolapk" translatable="false">http://www.coolapk.com/u/537470</string>
    <string name="mlgmxyysd_coolapk" translatable="false">http://www.coolapk.com/u/814297</string>
    <string name="mlgmxyysd_xda" translatable="false">https://forum.xda-developers.com/member.php?u=8430637</string>
    <string name="mlgmxyysd_github" translatable="false">https://github.com/MlgmXyysd</string>
    <string name="meowcat_website" translatable="false">http://www.meowcat.org/</string>
    <string name="meowcat_github" translatable="false">https://github.com/MeowCat-Studio</string>
    <string name="elderdrivers_github" translatable="false">https://github.com/ElderDrivers/</string>
    <string name="elderdrivers_website" translatable="false">http://edxp.meowcat.org/</string>
    <string name="group_qq_link" translatable="false">https://jq.qq.com/?k=57IiX8R</string>
    <string name="group_telegram_link" translatable="false">http://t.me/Code_of_MeowCat</string>
    <string name="group_telegram_channel_link" translatable="false">http://t.me/EdXposed</string>
    <string name="menuSend">Send</string>
    <string name="menuSaveToSd">Save to SD card</string>
    <string name="download_progress">%1$,d / %2$,d kB</string>
    <string name="tabInstall">Device</string>
    <string name="tabDownload">Download</string>
    <string name="welcome_framework_update_available">An update for EdXposed Framework is available (%s)</string>
    <string name="nav_item_install" translatable="false">EdXposed</string>
    <string name="nav_item_modules">Modules</string>
    <string name="nav_item_download">Download</string>
    <string name="nav_item_logs_verbose">Verbose Logs</string>
    <string name="nav_item_logs_modules">Module Logs</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="install">Install/Update</string>
    <string name="uninstall">Uninstall</string>
    <string name="soft_reboot">Reboot to Userspace</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_">Reboot…</string>
    <string name="areyousure">Are you sure?</string>
    <string name="phone_not_compatible">EdXposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s)</string>
    <string name="reboot_failed">Reboot failed. Please use the device\'s normal reboot function</string>
    <string name="install_warning_title">Be careful!</string>
    <string name="install_warning">In some cases, your device might no longer boot after installing EdXposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install or use EdXposed!\n\nIn any case, having a recent backup is highly recommended.</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="install_known_issue">There seems to be a known issue:\n\"%s\"\n\nThis may render EdXposed malfunction or unusable.</string>
    <string name="install_known_issue_details">Details…</string>
    <string name="installed_lollipop">EdXposed Framework is active</string>
    <string name="installed_lollipop_inactive">EdXposed Framework is installed, but not active</string>
    <string name="modules_updates_available">Module update(s) are available</string>
    <string name="root_failed">Failed to get root access\n\nMake sure your device is rooted properly and you have not blocked shell commands</string>
    <string name="module_is_not_activated_yet">EdXposed module is not activated yet</string>
    <string name="module_is_not_activated_yet_detailed">%s has been installed, but is not activated yet</string>
    <string name="activate_and_reboot">Activate and reboot</string>
    <string name="activate_only">Activate only</string>
    <string name="module_activated">EdXposed module has been activated</string>
    <string name="module_empty_description">(no description provided)</string>
    <string name="module_no_ui">This module does not provide a user interface</string>
    <string name="no_xposed_modules_found">No EdXposed modules were found!</string>
    <string name="xposed_module_list_updated">EdXposed module list was updated. Changes will become active after restart app</string>
    <string name="xposed_module_updated_notification_title">EdXposed module updated</string>
    <string name="xposed_module_updated_notification">Restart app to activate changes</string>
    <string name="warning_xposed_min_version">This module requires a newer EdXposed version (%d) and thus cannot be activated</string>
    <string name="no_min_version_specified">This module does not specify the EdXposed version it needs.</string>
    <string name="warning_min_version_too_low">This module was created for EdXposed version %1$d, but due to incompatible changes in version %2$d, it has been disabled</string>
    <string name="module_launch">Launch UI</string>
    <string name="module_download_updates">Download/Updates</string>
    <string name="module_support">Support</string>
    <string name="modules_app_store">View in App Store</string>
    <string name="module_app_info">App info</string>
    <string name="module_uninstall">Uninstall</string>
    <string name="xposed_not_active">EdXposed Framework is not currently installed or active\nYou can turn off status check in settings</string>
    <string name="menuSearch">Search</string>
    <string name="menuReload">Reload</string>
    <string name="menuRefresh">Refresh</string>
    <string name="changes">Changelog:</string>
    <string name="download_details_page_description">Description</string>
    <string name="download_details_page_versions">Versions</string>
    <string name="download_details_page_settings">Settings</string>
    <string name="reltype_stable">Stable</string>
    <string name="reltype_stable_summary">Stable (low risk of bugs)</string>
    <string name="reltype_beta">Beta</string>
    <string name="reltype_beta_summary">Beta (some bugs to be expected)</string>
    <string name="reltype_experimental">Experimental</string>
    <string name="reltype_experimental_summary">Experimental (high risk of bugs)</string>
    <string name="reltype_use_global_summary">Use global setting</string>
    <string name="download_author">by %s</string>
    <string name="download_unknown_author">unknown author</string>
    <string name="download_status_installed">Installed (version %s)</string>
    <string name="download_status_update_available">Update available (version %1$s \u2192 %2$s)</string>
    <string name="download_timestamps">Added on %1$s \u00b7 Updated on %2$s</string>
    <string name="download_sorting_title">Sorting order</string>
    <string name="download_sorting_status">Sort by status</string>
    <string name="download_sorting_updated">Sort by last update</string>
    <string name="download_sorting_created">Sort by creation date</string>
    <string name="download_section_framework">EdXposed Framework</string>
    <string name="download_section_update_available">Update available</string>
    <string name="download_section_installed">Installed</string>
    <string name="download_section_not_installed">Not installed</string>
    <string name="download_section_24h">Last 24 hours</string>
    <string name="download_section_7d">Last 7 days</string>
    <string name="download_section_30d">Last 30 days</string>
    <string name="download_section_older">More than 30 days ago</string>
    <string name="menu_show_modules">Show modules and manager</string>
    <string name="settings_sort_by_name">Sort by app name</string>
    <string name="settings_sort_by_name_reverse">Sort by app name (reversed)</string>
    <string name="settings_sort_by_package_name">Sort by package name</string>
    <string name="settings_sort_by_package_name_reverse">Sort by package name (reversed)</string>
    <string name="settings_sort_by_install_time">Sort by install time</string>
    <string name="settings_sort_by_install_time_reverse">Sort by install time (reversed)</string>
    <string name="settings_sort_by_update_time">Sort by update time</string>
    <string name="settings_sort_by_update_time_reverse">Sort by update time (reversed)</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="download_view_download">Download and Install</string>
    <string name="download_view_install">Install</string>
    <string name="download_view_cancel">Cancel</string>
    <string name="export_">Export…</string>
    <string name="import_">Import…</string>
    <string name="export_enabled_modules">Export enabled modules list</string>
    <string name="import_enabled_modules">Import enabled modules list</string>
    <string name="export_installed_modules">Export installed modules list</string>
    <string name="import_installed_modules">Import installed modules list</string>
    <string name="scroll_top">Scroll to top</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="reboot_download">Reboot to Download</string>
    <string name="scroll_bottom">Scroll to bottom</string>
    <string name="save">Save only</string>
    <string name="dexopt_now">Optimize all apps with Dexopt</string>
    <string name="speed_now">Optimize all apps with Dex2oat(Speed mode)</string>
    <string name="nav_title_black_list">Xposed Hide</string>
    <string name="nav_title_compat_list">Compat Mode</string>
    <string name="menu_title_compile_reset">Deoptimize</string>
    <string name="menu_title_compile_speed">Optimize with Speed mode</string>
    <string name="menu_title_compile_dexopt">Optimize with Dexopt mode</string>
    <string name="app_launch">Launch</string>
    <string name="app_stop">Force stop</string>
    <string name="enabled_top">Prioritize the checked items</string>
    <string name="list_sort">List sorting</string>
    <string name="nav_item_logs">Logs</string>
    <string name="menu_show_system_apps">Show system apps</string>
    <string name="menu_optimize">Optimize</string>
    <string name="item_list_filter">Filter</string>
    <string name="menu_show_no_name">Show apps without names</string>
    <string name="menu_show_no_icon">Show apps without icon</string>
    <string name="menu_show_user_apps">Show user apps</string>
</resources>