<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_menu_launch"
        android:icon="@drawable/ic_launch"
        android:title="@string/app_launch" />
    <item
        android:id="@+id/app_menu_stop"
        android:icon="@drawable/ic_stop"
        android:title="@string/app_stop" />
    <item
        android:id="@+id/app_menu_compile_speed"
        android:icon="@drawable/ic_flash"
        android:title="@string/menu_title_compile_speed" />
    <item
        android:id="@+id/app_menu_compile_dexopt"
        android:icon="@drawable/ic_flash"
        android:title="@string/menu_title_compile_dexopt" />
    <item
        android:id="@+id/app_menu_compile_reset"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/menu_title_compile_reset" />
    <item
        android:id="@+id/app_menu_store"
        android:icon="@drawable/ic_appstore"
        android:title="@string/modules_app_store" />
    <item
        android:id="@+id/app_menu_info"
        android:icon="@drawable/ic_appinfo"
        android:title="@string/module_app_info" />
    <item
        android:id="@+id/app_menu_uninstall"
        android:icon="@drawable/ic_uninstall"
        android:title="@string/module_uninstall" />
</menu>