<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/export_"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/export_enabled_modules"
                android:title="@string/export_enabled_modules"
                app:showAsAction="never"/>
            <item
                android:id="@+id/export_installed_modules"
                android:title="@string/export_installed_modules"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:title="@string/import_"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/import_enabled_modules"
                android:title="@string/import_enabled_modules"
                app:showAsAction="never"/>
            <item
                android:id="@+id/import_installed_modules"
                android:title="@string/import_installed_modules"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:title="@string/reboot"
        app:showAsAction="never">
        <menu>
        <item
            android:id="@+id/reboot"
            android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="never"
            android:title="@string/reboot"/>

        <item
            android:id="@+id/soft_reboot"
            android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="never"
            android:title="@string/soft_reboot"/>

        <item
            android:id="@+id/reboot_recovery"
            android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="never"
            android:title="@string/reboot_recovery"/>
        </menu>
    </item>
    
</menu>