<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_saves"
        android:title="@string/menuSaveToSd"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_sends"
        android:title="@string/menuSend"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/ic_swipe"
        android:title="@string/menuClearLog"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menuReload"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_scroll_top"
        android:icon="@drawable/ic_scroll_top"
        android:title="@string/scroll_top"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_scroll_down"
        android:icon="@drawable/ic_scroll_down"
        android:title="@string/scroll_bottom"
        app:showAsAction="ifRoom"/>

</menu>