<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_1"
            android:icon="@drawable/ic_nav_install"
            android:title="@string/nav_item_install"/>
        <item
            android:id="@+id/drawer_item_2"
            android:icon="@drawable/ic_nav_modules"
            android:title="@string/nav_item_modules"/>
        <item
            android:id="@+id/drawer_item_3"
            android:icon="@drawable/ic_nav_downloads"
            android:title="@string/nav_item_download"/>
        <item
            android:id="@+id/drawer_item_4"
            android:icon="@drawable/ic_nav_logs"
            android:title="@string/nav_item_logs"/>
        <item
            android:id="@+id/drawer_item_8"
            android:icon="@drawable/ic_nav_logs"
            android:title="@string/nav_item_verbose_logs"/>
        <item
            android:id="@+id/nav_black_list"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/nav_title_black_list"
            android:visible="false"/>
        <item
            android:id="@+id/nav_compat_list"
            android:icon="@drawable/ic_local_hospital"
            android:title="@string/nav_title_compat_list"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_title_settings"
            android:visible="true"/>
    </group>
    <group
        android:id="@+id/option_items"
        android:checkableBehavior="all">
        <item
            android:id="@+id/drawer_item_5"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_item_settings"/>
        <item
            android:id="@+id/drawer_item_6"
            android:icon="@drawable/ic_nav_support"
            android:title="@string/nav_item_support"/>
        <item
            android:id="@+id/drawer_item_7"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_item_about"/>
    </group>
</menu>