<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownload"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="?attr/appColorAccent"
            android:text="@string/download_view_download"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFF"
            app:strokeColor="?attr/colorAccentLight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="?attr/appColorAccent"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFF"
            app:strokeColor="?attr/colorAccentLight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownloadCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/download_view_cancel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/appColorAccent"
            android:visibility="gone"
            app:strokeColor="?attr/colorAccentLight"
            tools:ignore="com.google.android.material.button.MaterialButtonOrder" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInstall"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/download_view_install"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/appColorAccent"
            android:visibility="gone"
            app:strokeColor="?attr/colorAccentLight" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</merge>